# pyrad

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  LICENSE.txt  MANIFEST.in  Makefile  NEWS  README.rst  README.txt  TODO  TODO.rst  TODO.txt  conf.py  index.txt  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml  python-publish.yml  python-test.yml
doc/: conf.py  index.txt
docs/: Makefile  conf.py  index.rst  make.bat
docs/.static/: repoze.css
docs/api/: client.rst  dictionary.rst  host.rst  packet.rst  proxy.rst  server.rst
docs/source/: conf.py  index.rst
docs/source/api/: client.rst  dictionary.rst  host.rst  packet.rst  proxy.rst  server.rst
example/: acct.py  acct_async.py  auth.py  auth_async.py  client-coa.py  coa.py  dictionary  dictionary.freeradius  server.py  server_async.py  status.py  twisted_server.py
pyrad/: __init__.py  bidict.py  client.py  client_async.py  curved.py  dictfile.py  dictionary.py  host.py  packet.py  parser.py  proxy.py  server.py  server_async.py  tools.py  utility.py
pyrad/datatypes/: base.py  leaf.py  structural.py
pyrad/tests/: __init__.py  mock.py  testBidict.py  testClient.py  testDictionary.py  testHost.py  testPacket.py  testProxy.py  testServer.py  testTools.py  test_client.py  test_dictionary.py  test_packet.py  test_proxy.py  test_server.py  test_tools.py
pyrad/tests/data/: empty  full  realistic  simple
pyrad2/: __init__.py  bidict.py  client.py  client_async.py  curved.py  dictfile.py  dictionary.py  host.py  packet.py  proxy.py  server.py  server_async.py  tools.py
sample_dictionary/: dictionary
src/: __init__.py  client.py  curved.py  dictionary.py  host.py  packet.py  server.py  tools.py
src/tests/: __init__.py  testDictionary.py
src/tests/data/: simple
tests/: __init__.py  mock.py  testBidict.py  testClient.py  testDatatypes.py  testDictionary.py  testHost.py  testPacket.py  testProxy.py  testServer.py  testTools.py  test_bidict.py  test_host.py  test_packet.py  test_server.py  test_tools.py
tests/data/: chap  full  simple
tmp/: python-test.yml
