[metadata]
name = pyrad
version = 2.4
author = Istvan Ruzman
author-email = istvan@ruzman.eu
description = "RADIUS tools"
platform = any
long-description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
license-file = LICENSE.txt
keywords = "AAA accounting authentication authorization RADIUS"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
  ]

[options]
zip_safe = true
include_package_data = true
packages = pyrad
test_suite = nose.collector
python_requires = >= 2.7, !=3.1.*, !=3.2.*, !=3.3.*
exclude = tests
setup_requires = setuptools
install_requires =
  six
  netaddr
test_require =
  nose

[options.extras_require]
test =
  coverage
  coveralls


[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[flake8]
max-line-length = 100
doctests = True
